fixed card sizing on mobile

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -17,7 +17,7 @@
 }
 
 .card {
-    min-width: 200px;
+    min-width: 320px;
     margin: 8px;
     flex-basis: 30%;
     .card-img-top {
